--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ form {
   align-items: center;
   background-color: #00ffff;
   width: 100%;
-  max-width: 250px;
+  max-width: 350px;
   margin: 0 auto;
   border: 2px solid #ff00ff;
   border-radius: 8px;
@@ -80,6 +80,12 @@ input {
   color: #ff00ff;
 }
 
+#task-notes {
+  border: 2px solid #ff00ff;
+  border-radius: 5px;
+  width: 100%;
+  max-width: 200px;
+}
 
 button {
   padding: 6px 6px;
@@ -123,67 +129,23 @@ button:hover {
   padding: 1rem;
 }
 
+
 .task-card {
   margin-bottom: 5px;
   background-color: #00ffff;
   border: 2px solid #ff00ff;
   box-shadow: 0 2px 6px #ff00ff;
   border-radius: 6px;
+   box-sizing: border-box;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  overflow: hidden;
 }
 
-.calendar-header {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  text-align: center;
-  font-weight: bold;
-  padding: 10px 0;
-  background-color: #00ffff;
-  border-radius: 8px;
-  margin-bottom: 10px;
-}
-
-.calendar-day-label {
-  padding: 5px;
-  font-size: 14px;
-}
-
-.calendar-grid {
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  gap: 10px;
-}
-
-.calendar-cell {
-  min-height: 100px;
-  max-height: 120px;
-  background-color: #00ffff;
-  border-radius: 8px;
-  padding: 8px;
-  box-shadow: 0 2px 5px #ff00ff;
-  font-size: 14px;
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
-}
-
-.calendar-cell::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
-}
-
-.calendar-cell strong {
-  font-size: 16px;
-  margin-bottom: 5px;
-}
-
-.calendar-cell.empty {
-  background: transparent;
-  box-shadow: none;
-}
-
-.calendar-cell p {
-  margin: 2px 0 ;
-  font-size: 13px;
+.task-card p {
+  margin: 6px 0;
+  line-height: 1.4;
+  white-space: pre-wrap; /* allows multi-line notes */
 }
 
 #task-container {
@@ -218,42 +180,29 @@ button:hover {
   gap: 10px;
 }
 
-#quote-box {
-  max-width: 600px;
-  margin: 2rem auto;
-  padding: 1.5rem;
+#schedule-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.day-card {
   background-color: #00ffff;
   border: 2px solid #ff00ff;
-  border-radius: 8px;
   text-align: center;
-  font-family: 'Monospace';
 }
 
-#quote-text {
-  font-size: 1.2rem;
-  color: #ff00ff;
-  margin-bottom: 0.5rem;
+
+#task-history {
+  margin-top: 20px;
 }
 
-#quote-author {
-  font-size: 1rem;
-  color: #ff00ff;
-  font-style: italic;
+#task-history h2 {
+  text-align: center;
 }
-
 @media (max-width: 768px) {
-  .calendar-header, 
-  .calendar-grid {
-    grid-template-columns: repeat(7, 1fr);
-    font-size: 12px;
-  }
 
-  .calendar-cell {
-    min-height: 80px;
-    padding: 6px;
-  }
-
-  .calendar-cell p {
-    font-size: 12px;
+  #schedule-container {
+    display: grid;
+    grid-template-columns: 1fr;
   }
 }
