--- a/frontend/style.css
+++ b/frontend/style.css
@@ -315,6 +315,13 @@ h2 {
   text-align: center;
 }
 
+#log-task-container {
+   display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  padding: 1rem;
+}
+
 @media (max-width: 768px) {
 
   #schedule-container {
