--- a/frontend/style.css
+++ b/frontend/style.css
@@ -44,6 +44,7 @@ ul {
   color: #ff00ff;
   font-weight: 900;
   font-family: monospace;
+  text-shadow: 0 2px 6px #ff00ff;
 }
 
 li {
@@ -419,6 +420,20 @@ h2 {
 }
 .hamburger.open .bar:nth-child(3) {
   transform: rotate(-45deg) translate(5px, -5px);
+}
+
+#quote-section {
+  color: #f4f4f5;
+  background-color: #1f1f24;
+   border: 2px solid #ff00ff;
+  box-shadow: 0 2px 6px #ff00ff;
+  text-align: center;
+  padding: 0.5rem;
+  margin: 1rem;
+}
+
+#quote-section p {
+  margin-top: 5px;
 }
 
 .footer {
